<resources>
    <string name="app_name">Exhibtion</string>
    <string name="splash_text2">easily with my exhibtions !</string>
    <string name="forget_password">Forget password</string>
    <string name="Login">Login</string>
    <string name="CreateNewAccount">Create New Account</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>

    <string name="Phone">Phone</string>
    <string name="Confirmpassword">Confirm password</string>
    <string name="FullName">Full Name</string>
    <string name="Register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search_for_exhibitions">Search for exhibitions</string>
    <string name="Home">Home</string>
    <string name="Exhibitions_under_construction">Exhibitions under Construction</string>
    <string name="Service_providers">Service providers</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="CurrentExhibitions">Current Exhibitions</string>
    <string name="PreviousExhibitions">Previous Exhibitions</string>
    <string name="AboutUs">About Us</string>

    <string name="Organizers_and_service_providers">Services</string>
    <string name="Sponsors">Sponsors</string>
    <string name="Exhibitors">Exhibitors</string>
    <string name="Vacantjobs">Vacant jobs</string>
    <string name="ContactUs">Contact Us</string>
    <string name="ServicesProvided">المنتجات</string>
    <string name="pleaseWriteyourkeysearch">please,Write your key search</string>
    <string name="checkNetworkConnection">check Network Connection!</string>
    <string name="Key_search_is_required">Key search is required!</string>
    <string name="Settings">Settings</string>
    <string name="LogOut">LogOut</string>
    <string name="view_all_exhibitions">View all exhibitions</string>
    <string name="NoResultFound">No result found!</string>
    <string name="EShop">E-Shop</string>
    <string name="Send">Send</string>
    <string name="Pleasewriteyourname">Please,write your name!</string>
    <string name="Pleasewriteyouremailaddress">Please,write your email address!</string>
    <string name="Pleasewriteyourphone">Please,write your phone!</string>
    <string name="Pleaseleaveyourmsg">Please,leave your message!</string>
    <string name="Pleasefullyourinformation">Please,full your information!</string>
    <string name="Invalidemail">Invalid email!</string>
    <string name="News">News</string>
    <string name="Reason">Reason</string>
    <string name="Message">Message</string>
    <string name="RegisterNow">Register Now</string>
    <string name="Exhibtor">Exhibtor</string>
    <string name="Visitor">Visitor</string>
    <string name="Register_in_exhibtion">Register in exhibtion</string>
    <string name="Available_pollutants">Available puthes</string>
    <string name="Confirm">Confirm</string>
    <string name="Register_as_an_exhibtion_owner">Register as an exhibtion owner</string>
    <string name="Exhibtion_owner">Exhibtion owner</string>
    <string name="Service_Provider">Service Provider</string>
    <string name="Exhibtion_Name">Exhibtion Name</string>
    <string name="Exhibtion_Location">Exhibtion Location</string>
    <string name="Submit">Submit</string>
    <string name="Expires_in">Expires in</string>
    <string name="Start_in">Start in</string>
    <string name="service_provider_Name">Service provider Name</string>
    <string name="Service_provided_Type">Service provided Type</string>
    <string name="AddingOffer">Adding Offer</string>
    <string name="Visit_the_exhibition">Visit the exhibition</string>
    <string name="Request_an_Offer">Request an Offer</string>
    <string name="PleaseWriteServiceProvidedType">Please,write Service provided Type!</string>
    <string name="pleaseWriteExhibtionLocation">please,Write Exhibtion Location</string>
    <string name="pleaseleaveYourMessage">please,leave Your Message!</string>
    <string name="Search_for_a_service_provider">Search for a service provider</string>
    <string name="ServiceProviders">Service Providers</string>
    <string name="RegisterAsVisitor">Register As a Visitor</string>
    <string name="RegisterAsExhibtor">Register As an Exhibtor</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="Exhibition_halls">Exhibition halls</string>
    <string name="Hall_1">Hall 1</string>
    <string name="Hall_2">Hall 2</string>
    <string name="Hall_3">Hall 3</string>
    <string name="Hall_4">Hall 4</string>
    <string name="Jops">Vacant Jops</string>
    <string name="ourWebsite">Exhibtion Location</string>
    <string name="nabza">about Exhibtor</string>
    <string name="link">Link of website with 360 degree</string>
    <string name="Illustration_of_the_exhibtion">Illustration of the exhibtion</string>
    <string name="CompanyWebsite">Company Location inside The Exhibtion</string>


</resources>
