<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_CurrentExhibitions"
            android:title="@string/CurrentExhibitions" />
        <item
            android:id="@+id/nav_PreviousExhibitions"
            android:title="@string/PreviousExhibitions" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/AboutUs" />
        <item
            android:id="@+id/nav_call_us"
            android:title="@string/CallUs" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/Settings"/>
            <item
                android:id="@+id/nav_logOut"
                android:title="@string/LogOut" />
        </menu>
    </item>

</menu>
