<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/logo_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_22sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_relative_mail"
        android:layout_below="@id/login_img_logo"
        android:layout_marginTop="@dimen/_42sdp"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_text_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:hint="@string/Email"
            android:textColorHint="#fff"
            >

            <EditText
                android:id="@+id/login_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/_10sdp"
                android:inputType="text"
                android:textColor="#fff"
                />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_relative_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_relative_mail"
        android:layout_marginTop="@dimen/_10sdp"

        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:hint="@string/Password"
            >

            <EditText
                android:id="@+id/login_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#fff"
                />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/login_text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_relative_password"
        android:textSize="@dimen/_13sdp"
        android:textColor="#fff"
        android:text="@string/forget_password"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="normal"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/login_card_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_below="@+id/login_text_forgot_password"
        android:background="@drawable/button_visitor"
        android:layout_marginTop="@dimen/_40sdp">
        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:text="@string/Login"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/button_login"
            android:textAllCaps="false"
            />

    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/login_text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_below="@id/login_card_btn_login"
        android:textColor="#fff"
        android:text="@string/CreateNewAccount"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>