<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterNowActivity"
    android:background="#fff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<ImageView
    android:id="@+id/register_now_logo"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    android:src="#dcf2ff"
    />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_choose"
            />
    <TextView
        android:id="@+id/register_now_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:layout_below="@id/register_now_logo"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/RegisterNow"
        android:textColor="#898989"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_now_text_title"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp">


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        app:cardBackgroundColor="#fff"

        >
        <Button
            android:id="@+id/register_now_btn_exhibtor"
            android:layout_width="@dimen/_84sdp"
            android:layout_height="@dimen/_52sdp"
            android:background="@drawable/btn_register_now"
            android:text="@string/Exhibtor"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        app:cardBackgroundColor="#fff"
        >
        <Button
            android:id="@+id/register_now_btn_visitor"
            android:layout_width="@dimen/_84sdp"
            android:layout_height="@dimen/_52sdp"
            android:background="@drawable/btn_register_now"
            android:text="@string/Visitor"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            />
    </android.support.v7.widget.CardView>
    </RelativeLayout>
    </RelativeLayout>
</ScrollView>