<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".fragment.ServiceProviderFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/nav_service_provider_img_logo"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/logo_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_22sdp"/>
        <RelativeLayout
            android:id="@+id/relative_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_service_provider_img_logo"
            android:layout_marginTop="@dimen/_22sdp"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:hint="@string/service_provider_Name" >

                <EditText
                    android:id="@+id/nav_service_provider_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="#fff"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relative_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_name"
            android:layout_marginTop="@dimen/_22sdp"
            >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:hint="@string/Service_provided_Type" >

                <EditText
                    android:id="@+id/nav_service_provider_edit_text_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="#fff"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_type"
            android:layout_marginTop="@dimen/_22sdp"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:hint="@string/Email" >

                <EditText
                    android:id="@+id/nav_service_provider_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_phone"
            android:layout_below="@+id/relative_email"
            android:layout_marginTop="@dimen/_10sdp"

            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                >

                <EditText
                    android:id="@+id/nav_service_provider_edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="#fff"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relative_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_phone"
            android:layout_marginTop="@dimen/_22sdp"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:hint="@string/Message" >

                <EditText
                    android:id="@+id/nav_service_provider_edit_text_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="#fff"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>



        <android.support.v7.widget.CardView
            android:id="@+id/register_card_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:layout_below="@+id/relative_msg"
            android:background="@drawable/button_visitor"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_22sdp">
            <Button
                android:id="@+id/nav_service_provider_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:text="@string/Submit"
                android:textSize="@dimen/_14sdp"
                android:background="@drawable/button_login"
                android:textAllCaps="false"

                />

        </android.support.v7.widget.CardView>


    </RelativeLayout>

</ScrollView>