<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash"
    tools:context=".fragment.ExhibtionOwnerFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/register_img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo_splash"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_22sdp"/>
        <RelativeLayout
            android:id="@+id/relative_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_img_logo"
            android:layout_marginTop="@dimen/_22sdp"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:hint="@string/Exhibtion_Name" >

                <EditText
                    android:id="@+id/register_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="#fff"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relative_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_name"
            android:layout_marginTop="@dimen/_22sdp"
            >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:hint="@string/Email" >

                <EditText
                    android:id="@+id/register_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_phone"
            android:layout_below="@+id/relative_email"
            android:layout_marginTop="@dimen/_10sdp"

            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                >

                <EditText
                    android:id="@+id/register_edit_text_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="#fff"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relative_exhibtion_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_phone"
            android:layout_marginTop="@dimen/_22sdp"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_exhibtion_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:hint="@string/Exhibtion_Location" >

                <EditText
                    android:id="@+id/register_edit_text_exhibtion_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="#fff"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_exhibtion_location"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp">

        <RelativeLayout
            android:id="@+id/relative_end_date"
            android:layout_width="@dimen/_142sdp"
            android:layout_height="wrap_content"

            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/Expires_in" >

                <EditText
                    android:id="@+id/register_edit_text_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="date"
                    android:textColor="#fff"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableStart="@drawable/ic_registeration_cal"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_start_date"
            android:layout_width="@dimen/_142sdp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/relative_end_date"
            android:layout_marginStart="@dimen/_6sdp"

            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Start_in" >

                <EditText
                    android:id="@+id/register_edit_text_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="date"
                    android:textColor="#fff"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableStart="@drawable/ic_registeration_cal"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/register_card_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:layout_below="@+id/relative_date"
            android:background="@drawable/button_visitor"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_22sdp">
            <Button
                android:id="@+id/register_btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:text="@string/Submit"
                android:textSize="@dimen/_14sdp"
                android:background="@drawable/button_login"
                android:textAllCaps="false"
                />
        </android.support.v7.widget.CardView>


    </RelativeLayout>

</ScrollView>